<resources>
    <string name="app_name">MyWeather</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_recent_searches_text">There aren\'t recent searches yet!</string>
    <string name="recent_searches_text">Recent searches:</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="temperature">Temperature:</string>
    <string name="no_connection">No se ha podido establecer la conexión</string>
    <string name="no_cities_found">No cities found that matches %1$s</string>
    <string name="no_temperature">No results found</string>
    <string name="temperature_value">%1$d\u2103</string>
    <string name="empty_search">Search a city for get its weather information</string>
    <string name="error_weather">Error loading weather info</string>
    <string name="population">Population:</string>
    <string name="updated_date">Updated: %1$s</string>
    <string name="main_activity_title">Search</string>
    <string name="detail_activity_title">Detail</string>
    <string name="connection_error">Se ha producido un error en la conexión</string>
</resources>
