<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lmsierra.com.myweather.fragments.DetailFragment">

    <LinearLayout
        android:id="@+id/fragment_detail_layout_city_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_detail_layout_footer"
        android:orientation="vertical">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/fragment_detail_map"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_detail_textview_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="start"
                        tools:text="Madrid"
                        android:textSize="25sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/fragment_detail_textview_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="start"
                        tools:text="Spain"
                        android:textSize="18sp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/population"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/fragment_detail_textview_population"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center|bottom"
                        tools:text="322232323"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <ScrollView
                android:id="@+id/fragment_detail_scrollview_weather_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temperature"
                        android:layout_margin="10dp"/>

                    <LinearLayout
                        android:id="@+id/fragment_detail_layout_temperature_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fragment_detail_textview_temperature"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_gravity="center_vertical"
                            tools:text="35ºC"
                            style="@style/style_temperature" />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:gravity="center">

                            <ProgressBar
                                android:id="@+id/fragment_detail_progressbar_temperature"
                                android:layout_width="match_parent"
                                android:layout_height="5dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_below="@+id/fragment_detail_textview_min_temperature"
                                android:progressDrawable="@drawable/temperature_progress"
                                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

                            <TextView
                                android:id="@+id/fragment_detail_textview_min_temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                tools:text="-50ºC" />

                            <TextView
                                android:id="@+id/fragment_detail_textview_max_temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                tools:text="50ºC"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fragment_detail_textview_no_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_temperature"
                        style="@style/style_temperature"
                        android:visibility="gone"/>

                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:id="@+id/fragment_detail_layout_error_temperature_load"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/error_weather" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/fragment_detail_textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="Updated: 09/03 12:28"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_layout_no_cities_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/fragment_detail_textview_no_cities_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            tools:text="@string/no_cities_found"
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>
